--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h3{
 
 section{
     display: flex;
+    margin-bottom: 90px;
 }
 .half-width{
     width: 50%;
@@ -39,4 +40,11 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+
+    background-position: right bottom;
 }
