--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h3{
     font-weight: 600;
 }
 
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 90px;
 }
@@ -47,4 +47,48 @@ section{
     background-repeat: no-repeat;
 
     background-position: right bottom;
+}
+
+.orange-color {
+    color: orange;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+
+    margin-left: 5%;
+    margin-right: 5%;
+
+    padding-left: 20px;
+    padding-right: 10px;
+
+    box-shadow: 10px 10px 40px gray;
+
+    border-radius:10px;
+
+
+}
+h2{
+    font-size: 38px;
+    font-weight: 700;
+}
+
+
+#web-dev{
+    border-left: 8px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+#full-stack{
+    border-left: 8px solid;
+    border-image: linear-gradient(orange, salmon);
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
